--- a/lesson6_3.ipynb
+++ b/lesson6_3.ipynb
@@ -1336,6 +1336,222 @@
     "for item_dict in csv_list:\n",
     "    print(item_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>﻿\"sno\"</th>\n",
+       "      <th>sna</th>\n",
+       "      <th>tot</th>\n",
+       "      <th>sbi</th>\n",
+       "      <th>sarea</th>\n",
+       "      <th>mday</th>\n",
+       "      <th>ar</th>\n",
+       "      <th>bemp</th>\n",
+       "      <th>act</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>大鵬華城</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>新店區</td>\n",
+       "      <td>20230520153438</td>\n",
+       "      <td>新北市新店區中正路700巷3號</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>汐止火車站</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15</td>\n",
+       "      <td>汐止區</td>\n",
+       "      <td>20230520153448</td>\n",
+       "      <td>南昌街/新昌路口(西側廣場)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>汐止區公所</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15</td>\n",
+       "      <td>汐止區</td>\n",
+       "      <td>20230520153421</td>\n",
+       "      <td>新台五路一段/仁愛路口(新台五路側汐止地政事務所前機車停車場)</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>國泰綜合醫院</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "      <td>汐止區</td>\n",
+       "      <td>20230520153433</td>\n",
+       "      <td>建成路78號對面停車場</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>捷運大坪林站(5號出口)</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>新店區</td>\n",
+       "      <td>20230520153441</td>\n",
+       "      <td>中興路三段224號(對面)</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>640</th>\n",
+       "      <td>1760</td>\n",
+       "      <td>龍米停車場</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>八里區</td>\n",
+       "      <td>20230520153437</td>\n",
+       "      <td>龍米路二段150號(旁)</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>641</th>\n",
+       "      <td>1761</td>\n",
+       "      <td>雙和醫院</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>中和區</td>\n",
+       "      <td>20230520153425</td>\n",
+       "      <td>中正路281號(公車亭旁)</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>642</th>\n",
+       "      <td>1762</td>\n",
+       "      <td>寶高智慧產業園區</td>\n",
+       "      <td>54</td>\n",
+       "      <td>19</td>\n",
+       "      <td>新店區</td>\n",
+       "      <td>20230520153421</td>\n",
+       "      <td>寶高路10號(旁)</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>643</th>\n",
+       "      <td>1763</td>\n",
+       "      <td>捷運三重站(1號出口)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4</td>\n",
+       "      <td>三重區</td>\n",
+       "      <td>20230520153437</td>\n",
+       "      <td>捷運路36號(旁)</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>1766</td>\n",
+       "      <td>捷運三民高中站(2號出口)</td>\n",
+       "      <td>22</td>\n",
+       "      <td>14</td>\n",
+       "      <td>蘆洲區</td>\n",
+       "      <td>20230520153429</td>\n",
+       "      <td>復興路58號旁</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>645 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ﻿\"sno\"            sna tot sbi sarea            mday   \n",
+       "0     1001           大鵬華城  12   7   新店區  20230520153438  \\\n",
+       "1     1002          汐止火車站  24  15   汐止區  20230520153448   \n",
+       "2     1003          汐止區公所  24  15   汐止區  20230520153421   \n",
+       "3     1004         國泰綜合醫院  28  12   汐止區  20230520153433   \n",
+       "4     1006   捷運大坪林站(5號出口)  26   7   新店區  20230520153441   \n",
+       "..     ...            ...  ..  ..   ...             ...   \n",
+       "640   1760          龍米停車場  20   5   八里區  20230520153437   \n",
+       "641   1761           雙和醫院  18   0   中和區  20230520153425   \n",
+       "642   1762       寶高智慧產業園區  54  19   新店區  20230520153421   \n",
+       "643   1763    捷運三重站(1號出口)  22   4   三重區  20230520153437   \n",
+       "644   1766  捷運三民高中站(2號出口)  22  14   蘆洲區  20230520153429   \n",
+       "\n",
+       "                                  ar bemp act  \n",
+       "0                    新北市新店區中正路700巷3號    5   1  \n",
+       "1                     南昌街/新昌路口(西側廣場)    7   1  \n",
+       "2    新台五路一段/仁愛路口(新台五路側汐止地政事務所前機車停車場)    9   1  \n",
+       "3                        建成路78號對面停車場   11   1  \n",
+       "4                      中興路三段224號(對面)   17   1  \n",
+       "..                               ...  ...  ..  \n",
+       "640                     龍米路二段150號(旁)   14   1  \n",
+       "641                    中正路281號(公車亭旁)   17   1  \n",
+       "642                        寶高路10號(旁)   35   1  \n",
+       "643                        捷運路36號(旁)   18   1  \n",
+       "644                          復興路58號旁    7   1  \n",
+       "\n",
+       "[645 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data=csv_list)\n",
+    "df.drop(columns=['sareaen','snaen','aren','lat','lng'])"
+   ]
   }
  ],
  "metadata": {
