--- a/lesson6_3.ipynb
+++ b/lesson6_3.ipynb
@@ -1339,7 +1339,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data=csv_list)\n",
+    "df1 = df.drop(columns=['sareaen','snaen','aren','lat','lng'])\n",
+    "df2 = df1.rename(columns={'\\ufeff\"sno\"':\"編號\",\n",
+    "                    'sna':'名稱',\n",
+    "                    'tot':'車輛數',\n",
+    "                    'sbi':\"可借\",\n",
+    "                    'sarea':'行政區',\n",
+    "                    'mday':'日期',\n",
+    "                    'ar':'地址',\n",
+    "                    'bemp':'可選',\n",
+    "                    'act':'狀態'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1363,15 +1383,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>﻿\"sno\"</th>\n",
-       "      <th>sna</th>\n",
-       "      <th>tot</th>\n",
-       "      <th>sbi</th>\n",
-       "      <th>sarea</th>\n",
-       "      <th>mday</th>\n",
-       "      <th>ar</th>\n",
-       "      <th>bemp</th>\n",
-       "      <th>act</th>\n",
+       "      <th>編號</th>\n",
+       "      <th>名稱</th>\n",
+       "      <th>車輛數</th>\n",
+       "      <th>可借</th>\n",
+       "      <th>行政區</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>可選</th>\n",
+       "      <th>狀態</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1513,44 +1533,42 @@
        "</div>"
       ],
       "text/plain": [
-       "    ﻿\"sno\"            sna tot sbi sarea            mday   \n",
-       "0     1001           大鵬華城  12   7   新店區  20230520153438  \\\n",
-       "1     1002          汐止火車站  24  15   汐止區  20230520153448   \n",
-       "2     1003          汐止區公所  24  15   汐止區  20230520153421   \n",
-       "3     1004         國泰綜合醫院  28  12   汐止區  20230520153433   \n",
-       "4     1006   捷運大坪林站(5號出口)  26   7   新店區  20230520153441   \n",
-       "..     ...            ...  ..  ..   ...             ...   \n",
-       "640   1760          龍米停車場  20   5   八里區  20230520153437   \n",
-       "641   1761           雙和醫院  18   0   中和區  20230520153425   \n",
-       "642   1762       寶高智慧產業園區  54  19   新店區  20230520153421   \n",
-       "643   1763    捷運三重站(1號出口)  22   4   三重區  20230520153437   \n",
-       "644   1766  捷運三民高中站(2號出口)  22  14   蘆洲區  20230520153429   \n",
+       "       編號             名稱 車輛數  可借  行政區              日期   \n",
+       "0    1001           大鵬華城  12   7  新店區  20230520153438  \\\n",
+       "1    1002          汐止火車站  24  15  汐止區  20230520153448   \n",
+       "2    1003          汐止區公所  24  15  汐止區  20230520153421   \n",
+       "3    1004         國泰綜合醫院  28  12  汐止區  20230520153433   \n",
+       "4    1006   捷運大坪林站(5號出口)  26   7  新店區  20230520153441   \n",
+       "..    ...            ...  ..  ..  ...             ...   \n",
+       "640  1760          龍米停車場  20   5  八里區  20230520153437   \n",
+       "641  1761           雙和醫院  18   0  中和區  20230520153425   \n",
+       "642  1762       寶高智慧產業園區  54  19  新店區  20230520153421   \n",
+       "643  1763    捷運三重站(1號出口)  22   4  三重區  20230520153437   \n",
+       "644  1766  捷運三民高中站(2號出口)  22  14  蘆洲區  20230520153429   \n",
        "\n",
-       "                                  ar bemp act  \n",
-       "0                    新北市新店區中正路700巷3號    5   1  \n",
-       "1                     南昌街/新昌路口(西側廣場)    7   1  \n",
-       "2    新台五路一段/仁愛路口(新台五路側汐止地政事務所前機車停車場)    9   1  \n",
-       "3                        建成路78號對面停車場   11   1  \n",
-       "4                      中興路三段224號(對面)   17   1  \n",
-       "..                               ...  ...  ..  \n",
-       "640                     龍米路二段150號(旁)   14   1  \n",
-       "641                    中正路281號(公車亭旁)   17   1  \n",
-       "642                        寶高路10號(旁)   35   1  \n",
-       "643                        捷運路36號(旁)   18   1  \n",
-       "644                          復興路58號旁    7   1  \n",
+       "                                  地址  可選 狀態  \n",
+       "0                    新北市新店區中正路700巷3號   5  1  \n",
+       "1                     南昌街/新昌路口(西側廣場)   7  1  \n",
+       "2    新台五路一段/仁愛路口(新台五路側汐止地政事務所前機車停車場)   9  1  \n",
+       "3                        建成路78號對面停車場  11  1  \n",
+       "4                      中興路三段224號(對面)  17  1  \n",
+       "..                               ...  .. ..  \n",
+       "640                     龍米路二段150號(旁)  14  1  \n",
+       "641                    中正路281號(公車亭旁)  17  1  \n",
+       "642                        寶高路10號(旁)  35  1  \n",
+       "643                        捷運路36號(旁)  18  1  \n",
+       "644                          復興路58號旁   7  1  \n",
        "\n",
        "[645 rows x 9 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(data=csv_list)\n",
-    "df.drop(columns=['sareaen','snaen','aren','lat','lng'])"
+    "df2"
    ]
   }
  ],
