--- a/lesson10_8.ipynb
+++ b/lesson10_8.ipynb
@@ -54,8 +54,11 @@
     "mask = (dataFrame1['可借'] <= 10) & (dataFrame1['可借'] >= 5)\n",
     "mask_dataFrame = dataFrame1[mask]\n",
     "count = mask_dataFrame[\"車數\"].count()\n",
-    "print(count)\n",
-    "print(mask_dataFrame)"
+    "\n",
+    "\n",
+    "group_data = dataFrame.groupby('行政區').sum()\n",
+    "areas = group_data.index.to_numpy().tolist()\n",
+    "areas"
    ]
   }
  ],
