--- a/lesson12_1.ipynb
+++ b/lesson12_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[975 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,39 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.read_csv('codeSearch.csv',usecols=['code','name'])"
+    "codeFrame = pd.read_csv('codeSearch.csv',usecols=['code','name'])\n",
+    "codeFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1101台泥\n",
+       "1        1102亞泥\n",
+       "2        1103嘉泥\n",
+       "3        1104環泥\n",
+       "4        1108幸福\n",
+       "         ...   \n",
+       "970      9944新麗\n",
+       "971     9945潤泰新\n",
+       "972    9946三發地產\n",
+       "973      9955佳龍\n",
+       "974     9958世紀鋼\n",
+       "Length: 975, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codeFrame['code'].astype(str) + codeFrame['name']"
    ]
   }
  ],
