--- a/lesson12_1.ipynb
+++ b/lesson12_1.ipynb
@@ -150,6 +150,203 @@
    "source": [
     "codeFrame['code'].astype(str) + codeFrame['name']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>68.475182</td>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>35.203022</td>\n",
+       "      <td>200662336736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>71.214043</td>\n",
+       "      <td>68.866341</td>\n",
+       "      <td>71.214043</td>\n",
+       "      <td>35.994045</td>\n",
+       "      <td>402466805912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>70.822884</td>\n",
+       "      <td>71.214043</td>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>35.203022</td>\n",
+       "      <td>197545715802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>67.301331</td>\n",
+       "      <td>68.475182</td>\n",
+       "      <td>66.518639</td>\n",
+       "      <td>67.692490</td>\n",
+       "      <td>34.214134</td>\n",
+       "      <td>235270344752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-10</th>\n",
+       "      <td>69.649033</td>\n",
+       "      <td>70.431351</td>\n",
+       "      <td>68.475182</td>\n",
+       "      <td>70.040192</td>\n",
+       "      <td>35.400738</td>\n",
+       "      <td>276171685539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-05</th>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>555.000000</td>\n",
+       "      <td>555.000000</td>\n",
+       "      <td>555.000000</td>\n",
+       "      <td>16827391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-06</th>\n",
+       "      <td>554.000000</td>\n",
+       "      <td>562.000000</td>\n",
+       "      <td>553.000000</td>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>20228086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-07</th>\n",
+       "      <td>561.000000</td>\n",
+       "      <td>568.000000</td>\n",
+       "      <td>560.000000</td>\n",
+       "      <td>568.000000</td>\n",
+       "      <td>568.000000</td>\n",
+       "      <td>27604813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-08</th>\n",
+       "      <td>562.000000</td>\n",
+       "      <td>568.000000</td>\n",
+       "      <td>555.000000</td>\n",
+       "      <td>559.000000</td>\n",
+       "      <td>559.000000</td>\n",
+       "      <td>23080195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-09</th>\n",
+       "      <td>561.000000</td>\n",
+       "      <td>566.000000</td>\n",
+       "      <td>561.000000</td>\n",
+       "      <td>565.000000</td>\n",
+       "      <td>565.000000</td>\n",
+       "      <td>19091713</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5845 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close   Adj Close  \\\n",
+       "Date                                                                     \n",
+       "2000-01-04   69.649033   69.649033   68.475182   69.649033   35.203022   \n",
+       "2000-01-05   69.649033   71.214043   68.866341   71.214043   35.994045   \n",
+       "2000-01-06   70.822884   71.214043   69.649033   69.649033   35.203022   \n",
+       "2000-01-07   67.301331   68.475182   66.518639   67.692490   34.214134   \n",
+       "2000-01-10   69.649033   70.431351   68.475182   70.040192   35.400738   \n",
+       "...                ...         ...         ...         ...         ...   \n",
+       "2023-06-05  560.000000  560.000000  555.000000  555.000000  555.000000   \n",
+       "2023-06-06  554.000000  562.000000  553.000000  560.000000  560.000000   \n",
+       "2023-06-07  561.000000  568.000000  560.000000  568.000000  568.000000   \n",
+       "2023-06-08  562.000000  568.000000  555.000000  559.000000  559.000000   \n",
+       "2023-06-09  561.000000  566.000000  561.000000  565.000000  565.000000   \n",
+       "\n",
+       "                  Volume  \n",
+       "Date                      \n",
+       "2000-01-04  200662336736  \n",
+       "2000-01-05  402466805912  \n",
+       "2000-01-06  197545715802  \n",
+       "2000-01-07  235270344752  \n",
+       "2000-01-10  276171685539  \n",
+       "...                  ...  \n",
+       "2023-06-05      16827391  \n",
+       "2023-06-06      20228086  \n",
+       "2023-06-07      27604813  \n",
+       "2023-06-08      23080195  \n",
+       "2023-06-09      19091713  \n",
+       "\n",
+       "[5845 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "yf.download('2330.TW')"
+   ]
   }
  ],
  "metadata": {
